--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
@@ -23,8 +23,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "next-cloudinary": "^6.16.0"
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
